<resources>
    <string name="app_name">Study Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Activity Login strings -->
    <string name="activity_login_logo_description">Application logo</string>
    <string name="activity_login_button_text">Log in</string>
    <string name="activity_login_forgot_password">Forgot password?</string>
    <string name="activity_login_create_new_account">Create new account</string>
    <string name="network_error_title">Internet is unavailable</string>
    <string name="network_error_content">Check if WiFi is turned on(recommended) or turn on the data traffic</string>
    <string name="server_error_title">Server is unavailable</string>
    <string name="server_error_content">Server is unavailable now. Please, try again later</string>
    <string name="wrong_input_data_title">Wrong input data</string>
    <string name="wrong_input_data_content">Check if you type email and password correctly.\nIf you forgot your password, use "Forgot password" link below</string>

    <!-- Activity Main Screen strings -->
    <!-- Activity Main Screen App bar strings -->
    <string name="activity_main_screen_toolbar_text">Study Project</string>
    <!-- Activity Main Screen nav header strings -->
    <string name="activity_main_screen_nav_header_user_name">Name</string>
    <string name="activity_main_screen_nav_header_user_balance">Balance</string>
    <string name="activity_main_screen_nav_header_currency">\tgrn.</string>
    <string name="activity_main_screen_nav_header_user_bonus">Bonus</string>
    <string name="activity_main_screen_nav_header_user_bonuses_currency">\tbonuses.</string>
    <!-- Activity Main Screen nav menu strings -->
    <string name="activity_main_screen_nav_menu_current_packet">Current Packet</string>
    <string name="activity_main_screen_nav_menu_cabinet">Cabinet</string>
    <string name="activity_main_screen_nav_menu_messages">Messages</string>
    <string name="activity_main_screen_nav_menu_contacts">Contacts</string>
    <string name="activity_main_screen_nav_menu_log_out">Log out</string>
    <!-- Activity Main Screen fragments titles -->
    <string-array name="fragments">
        <item>Current packet</item>
        <item>Cabinet</item>
        <item>Messages</item>
        <item>Contacts</item>
    </string-array>

    <!-- Fragment Cabinet strings -->
    <string name="cabinet_packet_date_end">Date end:\t</string>

    <!-- Fragment Current Packet strings -->
    <string name="all_channels">All</string>
    <string name="favorite_channels">Favorite</string>
    <string name="available_channels">Available</string>
    <string name="censored_channels">Censored</string>
    <string name="separator">,\t</string>

</resources>
