<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_packet"
            android:icon="@drawable/ic_menu_current_packet"
            android:title="@string/activity_main_screen_nav_menu_current_packet" />
        <item
            android:id="@+id/nav_cabinet"
            android:icon="@drawable/ic_menu_cabinet"
            android:title="@string/activity_main_screen_nav_menu_cabinet" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/activity_main_screen_nav_menu_messages" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/activity_main_screen_nav_menu_contacts" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_log_out"
                android:title="@string/activity_main_screen_nav_menu_log_out" />
        </menu>
    </item>

</menu>
