<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header"
    style="@style/activity_main_screen_nav_header_container_style"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nav_header_user_email"
        style="@style/activity_main_screen_nav_header_text_fields_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/activity_main_screen_nav_header_email_icon" />

    <TextView
        android:id="@+id/nav_header_user_id"
        style="@style/activity_main_screen_nav_header_text_fields_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/activity_main_screen_nav_header_id_icon" />

    <TextView
        android:id="@+id/nav_header_user_name"
        style="@style/activity_main_screen_nav_header_text_fields_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/activity_main_screen_nav_header_person_icon"
        android:text="@string/activity_main_screen_nav_header_user_name"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nav_header_user_balance"
            style="@style/activity_main_screen_nav_header_text_fields_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/activity_main_screen_nav_header_bancnote_icon"
            android:text="@string/activity_main_screen_nav_header_user_balance" />

        <TextView
            android:id="@+id/user_balance_currency"
            style="@style/activity_main_screen_nav_header_text_fields_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/activity_main_screen_nav_header_currency" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nav_header_user_bonus"
            style="@style/activity_main_screen_nav_header_text_fields_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/activity_main_screen_nav_header_balance_icon"
            android:text="@string/activity_main_screen_nav_header_user_bonus" />

        <TextView
            android:id="@+id/user_bonus_currency"
            style="@style/activity_main_screen_nav_header_text_fields_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/activity_main_screen_nav_header_user_bonuses_currency" />

    </LinearLayout>
</LinearLayout>
